# llm-proxy

./: .dockerignore  .gitignore  .mprlab-release.json  AGENTS.md  CHANGELOG.md  CNAME  Dockerfile  Makefile  README.md  docker-compose.local.yml  go.mod  go.sum  index.html  package-lock.json  package.json  playwright.blackbox.config.js  playwright.config.js  pyproject.toml  sitemap.xml
.github/workflows/: pages.yml  release.yml  test.yml
.mprl/: ISSUES.md
.mprlab/: AGENTS.FRONTEND.md  AGENTS.GIT.md  AGENTS.GO.md  ISSUES.md  POLICY.md  issues-md-format.md
.mprlab/deploy/: resources.yml
assets/llm-proxy/: resources.css  styles.css
cmd/cli/: config_file.go  configuration_helpers.go  main.go  root.go  root_test.go  site_render.go
configs/: .env.local.example  .env.sample  config.yml  tauth.local.yml
issues.md/: AGENTS.DOCKER.md  AGENTS.GO.md  AGENTS.PY.md  AGENTS.md  ISSUES.md  POLICY.md
llm-proxy-client/: main.go  main_test.go
python/: .coverage  pyproject.toml
python/llm_proxy_client/: __init__.py  client.py
python/llm_proxy_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_client.py
resources/: index.html
scripts/: build-container-artifact.sh  build-pages-artifact.sh  check_coverage.sh  check_frontend_syntax.mjs  deploy.sh  generate_seo_resources.mjs  publish-release.sh  publish.sh  publish_pages.sh  release.sh  test_live_gemini.sh  test_live_providers.sh  up.sh
site/: config-ui.yaml  index.html  llm-proxy-config.json  robots.txt  sitemap.xml
tests/: capabilities_test.go  operational_contract_test.go
(+185 files in other folders)
