[project]
name = "llm-proxy-client"
version = "0.1.0"
description = "Python client for llm-proxy JSON POST text requests."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
]

[tool.setuptools]
packages = ["llm_proxy_client"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["llm_proxy_client"]
